working changes