@@ -1,5 +1,7 @@
 package zingg.common.core.preprocess;
 
+import java.lang.reflect.InvocationTargetException;
+
 import zingg.common.client.FieldDefinition;
 import zingg.common.client.IArguments;
 import zingg.common.client.IZArgs;
@@ -11,16 +13,18 @@ public interface IPreprocessors<S,D,R,C,T> extends INeedsPreprocMap<S,D,R,C,T>, 
     
     public void setContext(IContext<S,D,R,C,T> c); 
 
+    public IContext<S,D,R,C,T> getContext();
+
     public IZArgs getArgs();
 
-    default ZFrame<D,R,C> preprocess(ZFrame<D,R,C> df) throws InstantiationException, IllegalAccessException, ZinggClientException { 
+    default ZFrame<D,R,C> preprocess(ZFrame<D,R,C> df) throws InstantiationException, IllegalAccessException, ZinggClientException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException { 
         ZFrame<D,R,C> dfp = df;  
         for(FieldDefinition def:((IArguments) getArgs()).getFieldDefinition()){
             for(IPreprocType o: getPreprocOrder()){
                 //creating new instance of the class
-                IPreprocessor ip = getPreprocMap().get(o).newInstance(); 
+                IPreprocessor ip = getPreprocMap().get(o).getDeclaredConstructor().newInstance(); 
                 //setting context and field defn
-                ip.getContext();
+                ip.setContext(getContext());
                 ip.setFieldDefinition(def);
                 dfp = ip.preprocess(dfp);
             }
